test_suite/tests/ui/integer/derive/from_xor_try_from.rs
use nutype::nutype;

#[nutype(derive(From, TryFrom))]
struct Number(i32);

fn main() {}
